Add public/index test to test with 2 script tags at the same time

--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,12 @@
 </head>
 <body>
   <script data-signature-key='pk_35a270ca265ebce26d12d11a18349c' src='/build/signature-pad.js'></script>
+
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+
+  <script data-signature-key='pk_35a270ca265ebce26d12d11a18349c' src='/build/signature-pad.js'></script>
 </body>
 </html>
