Gets marrow working on a basic level

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,25 @@
 <body>
   <script data-signature-key='pk_35a270ca265ebce26d12d11a18349c' src='/build/signature-pad.js'></script>
 
-  <br/>
-  <br/>
-  <br/>
-  <br/>
+  <script type="text/javascript">
+    // var el = $("script")[0];
+    // if(el.addEventListener){
+    //   el.addEventListener('signature.data_url', function() {
+    //     alert('custom event triggered');
+    //   });
+    // }
 
-  <script data-signature-key='pk_35a270ca265ebce26d12d11a18349c' src='/build/signature-pad.js'></script>
+    $(document).ready(start);
+    function start() {
+      $('script').on('signature.data_url', function(){
+        alert("success!");
+      });
+    }
+  </script>
+
+  <br/>
+  <br/>
+  <br/>
+  <br/>
 </body>
 </html>
