--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 <body>
   <script data-signature-key='pk_35a270ca265ebce26d12d11a18349c' src='/build/signature-pad.js'></script>
 
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
   <script type="text/javascript">
     Zepto(document).on('signature_pad:data_url', function(e, data_url){
       console.log(data_url);
