French and english

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <br/>
   <br/>
 
-  <script src='/build/signature-pad.js'></script>
+  <script src='/build/signature-pad.fr.js'></script>
 
   <script type="text/javascript">
     signature_pad.script.addEventListener('signature_pad:data_url', function(e) {
